--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "不照顾家人的男人，根本算不上是个男人"
+description: "一生想做浪漫，并且能照顾好家人的男人"
 #header-img: "img/home-img/home12.jfif"
 ---
 
