--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "一生想做能顾家，且能浪漫的人"
+description: "他们彼此深信, 是瞬间迸发的热情让他们相遇。这样的确定是美丽的，但变幻无常更为美丽。"
 #header-img: "img/home-img/home12.jfif"
 ---
 
